# bsp-rs

./: .gitignore  Cargo.toml
assets/: maps  wads
crates/bevy_bsp/: Cargo.toml
crates/bevy_bsp/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: common.rs  error.rs  lib.rs  wad.rs
crates/decoder/src/format/: gold_src_30.rs  mod.rs
crates/rg3d_bsp/: Cargo.toml
crates/rg3d_bsp/src/: input.rs  loader.rs  main.rs
src/: main.rs
src/assets/: mod.rs
src/plugins/ui/: buttons.rs  fps.rs  info.rs  load_map.rs  mod.rs
