[package]
name = "bsp-rs"
version = "0.1.0"
authors = ["Casper Rogild Storm", "tarkah <admin@tarkah.dev>"]
edition = "2018"

[workspace]
members = [
    ".",
    "crates/bevy_bsp",
    "crates/cli",
    "crates/decoder",
    "crates/rg3d_bsp"
]

[dependencies]
bevy_bsp = { path = "./crates/bevy_bsp" }

anyhow = "1.0"
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_fly_camera = "0.7.0"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }